# redict

./: LICENSE  README.md  pyproject.toml
redict/src/: LICENSE  README.md
redict/src/redict/: example.py
src/redict/: __init__.py
