[project]
name = "redict"
version = "1.0.0"
description = "A Python library for accessing dictionary keys as attributes and providing enhanced functionality."
authors = [
    { name = "Clovis_P", email = "clovisp.pypi@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["dictionary", "dict", "attributes", "attirbute", "utility", "lightweight", "enhance", "enhanced", "builtins", "updating"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"